sandbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-sandbox
  namespace: dify
  labels:
    app: dify-sandbox
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dify-sandbox
  template:
    metadata:
      labels:
        app: dify-sandbox
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: dify-sandbox
        image: langgenius/dify-sandbox:0.2.11
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          exec:
            command:
            - "curl"
            - "-f"
            - "http://localhost:8194/health"
        ports:
        - containerPort: 8194
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: dify-sandbox-dependencies
          mountPath: /dependencies
        - name: dify-sandbox-config
          mountPath: /conf
      volumes:
      - name: dify-sandbox-dependencies
        configMap:
          name: dify-sandbox-dependencies
      - name: dify-sandbox-config
        configMap:
          name: dify-sandbox-config
---
apiVersion: v1
kind: Service
metadata:
  name: dify-sandbox
  namespace: dify
spec:
  ports:
  - port: 8194
    targetPort: 8194
    protocol: TCP
    name: dify-sandbox
  type: ClusterIP
  clusterIP: None
  selector:
    app: dify-sandbox
