ssrf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-ssrf
  namespace: dify
  labels:
    app: dify-ssrf
spec:
  selector:
    matchLabels:
      app: dify-ssrf
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dify-ssrf
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: dify-ssrf
        image: ubuntu/squid:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 300Mi
        ports:
        - containerPort: 3128
          name: dify-ssrf
        volumeMounts:
        - name: ssrf-proxy-config
          mountPath: /etc/squid/
        - name: ssrf-proxy-entrypoint
          mountPath: /tmp/
        command: [ "sh", "-c", "cp /tmp/docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh" ]
      volumes:
      - name: ssrf-proxy-config
        configMap:
          name: ssrf-proxy-config
      - name: ssrf-proxy-entrypoint
        configMap:
          name: ssrf-proxy-entrypoint
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dify-ssrf
  namespace: dify
spec:
  selector:
    app: dify-ssrf
  ports:
  - protocol: TCP
    port: 3128
    targetPort: 3128
